[tool.poetry]
name = "MF-Tools"
version = "1.0.0"
description = "Collection of helpful utilities for Manim"
authors = ["John Connell <johnconnelltutor@gmail.com>"]
license = "MIT"
repository = "https://github.com/TheMathematicFanatic/MF_Tools"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<=3.12"
manim = ">=0.17"

[tool.poetry.plugins."manim.plugins"]
"manim_play_timeline" = "manim_play_timeline"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"